Ajout de quatre div (1 ligne, 3 colonne)dans l'entête puis j'ai ajouté le logo de l'assiociation via un lien relatif et pour finir j'ai ajouter le titre de ma page.

--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,29 @@
 </head>
 <body>
     <!--Entête de la page avec le nom de l'association, le logo, les coordonnées,une navigation-->
-    <header>
-        
+    <header class="container-fluid">
+        <!--Première ligne-->
+        <div class="row">
+            <!--Colonne 1-->
+            <div class="col">
+                <img class="p-5" width="75%" src="Logo/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
+            </div>
+            <!--Colonne 2-->
+            <div class="col text-center p-5" >
+                <h1 class="p-2">Autisme 28</h1>
+                <h2>L'autisme en Eure et Loir</h2>
+            </div>
+            <!--Colonne 3-->
+            <div class="col">
+
+            </div>
+        </div>
     </header>
     <!--La partie principale de ma page -->
     <main>
 
     </main>
-    <!--bas de page-->
+    <!--bas de page"-->
     <footer>
 
     </footer>
