--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <!--Première ligne-->
         <div class="row">
             <!--Colonne 1-->
-            <div class="col">
+            <div class="col text-center">
                 <img class="p-5" width="75%" src="Logo/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
             </div>
             <!--Colonne 2-->
@@ -27,6 +27,39 @@
 
             </div>
         </div>
+        <!--Deuxième ligne-->
+        <!--Barre de navigation-->
+        <nav class="navbar navbar-expand-lg bg-primary">
+            <!--Conteneur fluide global-->
+            <div class="container-fluid">
+                <!--Lien du site-->
+                <a class="navbar-brand" href="#">Autisme 28</a>
+                <!--Bouton pour le mobil first-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#MenuCaché" aria-controls="MenuCaché" aria-expanded="false" aria-label="Menu de navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!--Contenu principal de ma page-->
+                <div class="collapse navbar-collapse" id="MenuCaché">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Actualité récente</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Des questions?</a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="#">Qu'est ce que c'est l'autisme?</a> 
+                                </li>
+                               
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <!--La partie principale de ma page -->
     <main>
