Ajouts de deux boutons (Faire un don, et Adhérer) a côté du titre de la page,puis j'ai ajouté du style css pour les styliser. J'ai aussi mis l'icône du site  en mode responsive design

--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,10 @@
     <!--Entête de la page avec le nom de l'association, le logo, les coordonnées,une navigation-->
     <header class="container-fluid">
         <!--Première ligne-->
-        <div class="row">
+        <div class="row m-4">
             <!--Colonne 1-->
-            <div class="col text-center">
-                <img class="p-5" width="75%" src="Logo/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
+            <div class="col logo">
+                <img class="" width="auto" src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
             </div>
             <!--Colonne 2-->
             <div class="col text-center p-5" >
@@ -23,13 +23,14 @@
                 <h2>L'autisme en Eure et Loir</h2>
             </div>
             <!--Colonne 3-->
-            <div class="col">
-
+            <div class="col icons d-grid gap-3">
+                <button class="don col-5 m-auto rounded p-4 d-block" type="button">Faire un don</button> 
+                <button class="adhérer m-auto col-5 rounded p-4 d-block" type="button">Adhérer</button>
             </div>
         </div>
         <!--Deuxième ligne-->
         <!--Barre de navigation-->
-        <nav class="navbar navbar-expand-lg bg-primary rounded">
+        <nav class="navbar navbar-expand-lg bg-primary rounded m-5 p-2">
             <!--Conteneur fluide global-->
             <div class="container-fluid forme">
                 <!--Lien du site-->
@@ -58,7 +59,7 @@
                         </li>
                         <!--Des question?-->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle p-3 rounded"  
+                            <a class="nav-link dropdown-toggle p-3 rounded question"  
                                role="button" 
                                data-bs-toggle="dropdown" 
                                aria-expanded="false" 
