Ajouts de marge sur l'entête pour équilibrer avec les marge de la navigation,pareil pour les boutons que j'ai aussi disposé dans la 3éme colonnes de mon entête, puis j'ai disposer mon titre dans la 2éme colonnes et mis de la couleur de texte.

--- a/Index.html
+++ b/Index.html
@@ -12,20 +12,24 @@
     <!--Entête de la page avec le nom de l'association, le logo, les coordonnées,une navigation-->
     <header class="container-fluid">
         <!--Première ligne-->
-        <div class="row m-4">
+        <div class="row m-5">
             <!--Colonne 1-->
-            <div class="col logo">
+            <div class="col-2 logo">
                 <img class="" width="auto" src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
             </div>
             <!--Colonne 2-->
-            <div class="col text-center p-5" >
-                <h1 class="p-2">Autisme 28</h1>
-                <h2>L'autisme en Eure et Loir</h2>
+            <div class="col-8 text-center p-5 titre" >
+                <div class="row">
+                    <h1 class="p-2 d-block col-12">Autisme 28</h1>
+                    <h2 class="d-block p-2 col-12">L'autisme en Eure et Loir</h2>
+                </div>
             </div>
             <!--Colonne 3-->
-            <div class="col icons d-grid gap-3">
-                <button class="don col-5 m-auto rounded p-4 d-block" type="button">Faire un don</button> 
-                <button class="adhérer m-auto col-5 rounded p-4 d-block" type="button">Adhérer</button>
+            <div class="col-2 icons d-grid gap-3">
+                <div class="row">
+                    <button class="don col-12 m-auto rounded p-4 d-block" type="button">Faire un don</button> 
+                    <button class="adhérer m-auto col-12 rounded p-4 d-block" type="button">Adhérer</button>
+                </div>
             </div>
         </div>
         <!--Deuxième ligne-->
