Titre de la page positionné dans sa div, margin et padding enlevé puis j'ai mis la div en display flex pour positionner correctement le titre, puis pour finir je lui ai changé sa couleur.

--- a/Index.html
+++ b/Index.html
@@ -18,10 +18,10 @@
                 <img class="" width="auto" src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
             </div>
             <!--Colonne 2-->
-            <div class="col-8 text-center p-5 titre" >
+            <div class="col-8 text-center titre" >
                 <div class="row">
-                    <h1 class="p-2 d-block col-12">Autisme 28</h1>
-                    <h2 class="d-block p-2 col-12">L'autisme en Eure et Loir</h2>
+                    <h1 class=" d-block col-12">Autisme 28</h1>
+                    <h2 class="d-block  col-12">L'autisme en Eure et Loir</h2>
                 </div>
             </div>
             <!--Colonne 3-->
