--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="média/mobil.css" rel="stylesheet" media="screen and (max-width: 530px)">
     <!--CDN bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Autisme 28</title>
@@ -12,30 +13,32 @@
     <!--Entête de la page avec le nom de l'association, le logo, les coordonnées,une navigation-->
     <header class="container-fluid">
         <!--Première ligne-->
-        <div class="row m-5">
+        <div class="row  entête d-flex m-4">
             <!--Colonne 1-->
-            <div class="col-2 logo">
-                <img class="" width="auto" src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
+            <div class="col-6 col-sm-2 logo">
+                <img class="img-fluid" width="auto" src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
             </div>
             <!--Colonne 2-->
-            <div class="col-8 text-center titre" >
+            <div class="col-6 col-sm-8 text-center titre " >
                 <div class="row">
                     <h1 class=" d-block col-12">Autisme 28</h1>
                     <h2 class="d-block  col-12">L'autisme en Eure et Loir</h2>
                 </div>
             </div>
             <!--Colonne 3-->
-            <div class="col-2 icons d-grid gap-3">
-                <div class="row gap-3">
-                    <button class="don col-12 m-auto rounded p-3 d-block" type="button">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-balloon-heart-fill" viewBox="0 0 16 16">
+            <div class="col-12 col-sm-2 icons gap-3 ">
+                <div class="row gap-3 bouton">
+                    <button class="don col-5 col-sm-12 rounded p-3" type="button">
+                        <div class="row">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="col-12 bi bi-balloon-heart-fill d-block" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"/>
-                        </svg>
-                        <span>Faire un don</span>
+                            </svg>
+                            <span>Faire un don</span>
+                        </div>
                     </button> 
-                    <button class="adhérer m-auto col-12 rounded p-3 d-block" type="button">
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="50" fill="currentColor" class=" bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                    <button class="adhérer col-5 col-sm-12 rounded p-3" type="button">
+                        <div class="row">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class=" col-12 bi bi-arrow-right-circle-fill d-block" viewBox="0 0 16 16">
                                 <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
                             </svg>
                             <span>Adhérer</span>
@@ -46,7 +49,7 @@
         </div>
         <!--Deuxième ligne-->
         <!--Barre de navigation-->
-        <nav class="navbar navbar-expand-lg bg-primary rounded m-5 p-2">
+        <nav class="navbar navbar-expand-lg bg-primary rounded m-4  p-2 ">
             <!--Conteneur fluide global-->
             <div class="container-fluid forme">
                 <!--Lien du site-->
