--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,6 @@
                 </div>
             </div>
         </div>
-        <!--Deuxième ligne-->
         <!--Barre de navigation-->
         <nav class="navbar navbar-expand-lg bg-primary rounded m-4  p-2 ">
             <!--Conteneur fluide global-->
@@ -97,7 +96,23 @@
         </nav>
     </header>
     <!--La partie principale de ma page -->
-    <main>
+    <main class="container">
+        <div class="container-fluid row autisme28 p-5 rounded">
+            <h3>Autisme28</h3>
+            <h4>Qui sommes nous?</h4>
+            <p class="col-12">Notre association est née en 1995, de la volonté d’un petit groupe de parents qui ne se connaissaient pas
+            vraiment mais dont les enfants fréquentaient le même hôpital de jour à Chartres et s’inquiétaient face à 
+            l’avenir de leurs enfants.Ils redoutaient d’être confrontés à la douloureuse question du devenir de ces 
+            enfants au jour de leur seize ans.</p>
+            <p class="col-12">En Eure et Loir en effet, aucune structure d’accueil spécialisée n’existait alors pour les adultes et 
+            les parents avaient le choix entre quelques foyers de vie surchargés et non dotés du personnel adéquat 
+            et le retour au domicile, l’hôpital psychiatrique n’apportant pas de réponse satisfaisante.</p>
+            <p class="col-12">Depuis beaucoup de choses ont évolué dans notre département : Un foyer de vie 
+            (structure à double tarification) a ouvert ses portes en Février 1999 et est géré par l’Ordre de Malte.</p>
+            <p class="col-12">Notre association a été partenaire pour la mise en place d’une structure d’accueil pour 
+            adolescents à Chartres, dépendant de l’hôpital de Chartres : le S.A.G.E. accueille actuellement 
+            de jeunes autistes</p>
+        </div>
 
     </main>
     <!--bas de page"-->
@@ -106,6 +121,8 @@
     </footer>
     
     <!--CDN bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
+            crossorigin="anonymous"></script>
 </body>
 </html>
