J'ai mis le (main) en container fluid et la section en display flex. Puis j'ai ajouté une marge de 5 et un padding de 4

--- a/Index.html
+++ b/Index.html
@@ -96,8 +96,8 @@
         </nav>
     </header>
     <!--La partie principale de ma page -->
-    <main class="container">
-        <div class="container-fluid row autisme28 p-5 rounded">
+    <main class="container-fluid">
+        <section class="d-flex m-5 row autisme28 p-4 rounded">
             <h3>Autisme28</h3>
             <h4>Qui sommes nous?</h4>
             <p class="col-12">Notre association est née en 1995, de la volonté d’un petit groupe de parents qui ne se connaissaient pas
@@ -112,7 +112,7 @@
             <p class="col-12">Notre association a été partenaire pour la mise en place d’une structure d’accueil pour 
             adolescents à Chartres, dépendant de l’hôpital de Chartres : le S.A.G.E. accueille actuellement 
             de jeunes autistes</p>
-        </div>
+        </section>
 
     </main>
     <!--bas de page"-->
