Ajout d'une div dans le footer, j'ai mis un liste ul a l'intèrieur de la div puis j'ai centré la liste,j'ai mis la balise footer en container fluid et la div en display flex. Pour finir j'ai ajouté une couleur de fond au footer.

--- a/Index.html
+++ b/Index.html
@@ -116,8 +116,14 @@
 
     </main>
     <!--bas de page"-->
-    <footer>
-
+    <footer class="container-fluid contact">
+        <div class="d-flex">
+            <ul>
+                <li>Tel</li>
+                <li>Email</li>
+                <li>Autres associations</li>
+            </ul>
+        </div>
     </footer>
     
     <!--CDN bootstrap-->
