Ajout d'une 2éme liste ul dans le footer pour mettre la mention légal et les autres associations, puis j'ai ajouté un padding sur chaque li, J'ai aussi mis le texte en gras et changé la couleur, puis j'ai changé l'alignement des deux listes pour les positionner dans le footer.

--- a/Index.html
+++ b/Index.html
@@ -117,11 +117,18 @@
     </main>
     <!--bas de page"-->
     <footer class="container-fluid contact">
-        <div class="d-flex">
+        <div class="d-flex m-2">
             <ul>
                 <li>Tel</li>
                 <li>Email</li>
-                <li>Autres associations</li>
+                <li>Adresse</li>
+            </ul>
+        </div>
+        <div class="d-flex m-2">
+            <ul>
+                <li>Mention légal</li>
+                <li>Autres association</li>
+                
             </ul>
         </div>
     </footer>
