--- a/Index.html
+++ b/Index.html
@@ -13,22 +13,22 @@
     <!--Entête de la page avec le nom de l'association, le logo, les coordonnées,une navigation-->
     <header class="container-fluid">
         <!--Première ligne-->
-        <div class="row  entête d-flex m-4">
+        <div class="row  entête d-flex">
             <!--Colonne 1-->
-            <div class="col-6 col-sm-2 logo">
-                <img class="img-fluid" width="auto" src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
+            <div class="col-6 col-sm-3 col-lg-2 logo">
+                <img   src="Image/logo-autisme.png" alt="Ceci  représente le logo de l'association autisme 28.">
             </div>
             <!--Colonne 2-->
-            <div class="col-6 col-sm-8 text-center titre " >
+            <div class="col-6 col-sm-6 col-lg-8 text-center titre " >
                 <div class="row">
                     <h1 class=" d-block col-12">Autisme 28</h1>
                     <h2 class="d-block  col-12">L'autisme en Eure et Loir</h2>
                 </div>
             </div>
             <!--Colonne 3-->
-            <div class="col-12 col-sm-2 icons gap-3 ">
-                <div class="row gap-3 bouton">
-                    <button class="don col-5 col-sm-12 rounded p-3" type="button">
+            <div class="col-12 col-sm-3 col-lg-2 icons">
+                <div class="row gap-1 bouton">
+                    <button class="don col-5 col-sm-12 rounded p-2 " type="button">
                         <div class="row">
                             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="col-12 bi bi-balloon-heart-fill d-block" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"/>
@@ -36,7 +36,7 @@
                             <span>Faire un don</span>
                         </div>
                     </button> 
-                    <button class="adhérer col-5 col-sm-12 rounded p-3" type="button">
+                    <button class="adhérer col-5 col-sm-12 rounded p-2" type="button">
                         <div class="row">
                             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class=" col-12 bi bi-arrow-right-circle-fill d-block" viewBox="0 0 16 16">
                                 <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
